# python-aoe2rms

./: .gitignore  Makefile  README.md  RmsGuide.md  pyproject.toml
aoe2rms/: __init__.py  conditionals.py  constants.py  map.py  random.py
aoe2rms/commands/: __init__.py  base.py  connection.py  elevation.py  land.py  objects.py  terrain.py
aoe2rms/constants/: __init__.py  all_objects.py  all_terrains.py  objects.py  terrains.py
aoe2rms/generations/: __init__.py  base.py  cliff.py  connection.py  elevation.py  land.py  objects.py  terrain.py
aoe2rms/presets/: resources.py
examples/: Ring Nomad.py
tests/: test_conditionals.py  test_map.py  test_random.py
tests/commands/: test_base.py  test_elevation.py
tournament_maps/s-tier/hidden-cup-4/: HC4 - Arabia.rms  HC4 - Bay.rms  HC4 - Bypass.rms  HC4 - Cross.rms  HC4 - Cup.rms  HC4 - Gold Rush.rms  HC4 - Hideout.rms  HC4 - High Tides.rms  HC4 - Islands.rms  HC4 - Mudflow.rms  HC4 - Quarry.rms  HC4 - Slopes.rms
tournament_maps/s-tier/hidden-cup-5/: HC5 Arabia v3.rms  HC5 Bay v5.rms  HC5 Bypass v1.rms  HC5 Cross v2.rms  HC5 Cup v2.rms  HC5 Evacuation v2.rms  HC5 Gold Rush v2.rms  HC5 Hidden Forts v2.rms  HC5 High Tides v2.rms  HC5 Islands v3.rms  HC5 Mudflow v1.rms  HC5 Quarry v4.rms  HC5 Slopes v3.rms
tournament_maps/s-tier/nac-4/: NAC4 African Reed Beds.rms  NAC4 Arabia.rms  NAC4 Dry Graveyards.rms  NAC4 Enclosed.rms  NAC4 Fortified Clearing.rms  NAC4 Frigid Lake.rms  NAC4 Golden Lakes.rms  NAC4 Golden Swamp.rms  NAC4 Hippo Arena.rms  NAC4 Hippopotamus.rms  NAC4 Kawasan.rms  NAC4 Morass.rms  NAC4 Outcrop.rms  (+2 more)
(+167 files in other folders)
